# ppdetlite_armlinux_demo

./: .gitignore  CMakeLists.txt  README.md
include/: keypoint_detector.h  object_detector.h  picodet_postprocess.h
paddlelite/include/: paddle_use_kernels.h  paddle_use_ops.h
src/: config_parser.cc  keypoint_detector.cc  keypoint_postprocess.cc  main.cc  object_detector.cc  picodet_postprocess.cc  preprocess_op.cc
